--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -117,7 +117,6 @@
   "txt-previous": "上一則",
   "txt-next": "下一則",
   "txt-events": "Events",
-  "txt-level": "等級",
 
   "txt-daily": "每日",
   "txt-weekly": "每星期",
@@ -207,9 +206,7 @@
     "txt-attacksMap": "攻擊地圖",
     "txt-alertStatistics": "告警數量統計",
     "txt-alertThreatLevel": "告警威脅等級統計",
-    "txt-alertIndicator": "告警指標種類摘要",
-    "txt-privateAlert": "最新10筆內部告警",
-    "txt-publicAlert": "最新10筆外部告警",
+    "txt-Top10ExternalPotSrcCountry": "外部國家告警統計",
     "txt-alertType": "告警類型",
     "txt-deviceName": "裝置名稱",
     "txt-ownerName": "所屬人員",
@@ -563,8 +560,9 @@
     "destPort": "目的Port",
     "honeyPot": "蜜罐種類",
     "protocol": "Protocol",
-    "options": "",
-    "attackCnt": "攻擊次數"
+    "attackCnt": "攻擊次數",
+    "level": "等級",
+    "options": ""
   },
   "payloadsFields": {
     "timestamp": "日期",
