Update Charts API logic to call one API and generate four charts.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -207,6 +207,7 @@
     "txt-alertStatistics": "Alert Statistics",
     "txt-alertThreatLevel": "Alert Threat Level",
     "txt-Top10ExternalPotSrcCountry": "Alert Source Country",
+    "txt-Top10InternalSrcIp": "Alert Internal Source IP",
     "txt-alertType": "Alert Type",
     "txt-deviceName": "Device Name",
     "txt-ownerName": "Owner Name",
