--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -207,6 +207,7 @@
     "txt-alertStatistics": "告警數量統計",
     "txt-alertThreatLevel": "告警威脅等級統計",
     "txt-Top10ExternalPotSrcCountry": "外部國家告警統計",
+    "txt-Top10InternalSrcIp": "內部主機告警統計",
     "txt-alertType": "告警類型",
     "txt-deviceName": "裝置名稱",
     "txt-ownerName": "所屬人員",
