Add more Pie charts to Dashboard. Add Alert details box for Alert World Map.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -208,6 +208,7 @@
     "txt-alertThreatLevel": "告警威脅等級統計",
     "txt-Top10ExternalPotSrcCountry": "外部國家告警統計",
     "txt-Top10InternalSrcIp": "內部主機告警統計",
+    "txt-Top10InternalMaskedIp": "內部網段告警統計",
     "txt-alertType": "告警類型",
     "txt-deviceName": "裝置名稱",
     "txt-ownerName": "所屬人員",
