--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -208,6 +208,7 @@
     "txt-alertThreatLevel": "Alert Threat Level",
     "txt-Top10ExternalPotSrcCountry": "Alert Source Country",
     "txt-Top10InternalSrcIp": "Alert Internal Source IP",
+    "txt-Top10InternalMaskedIp": "Alert Internal Masked IP",
     "txt-alertType": "Alert Type",
     "txt-deviceName": "Device Name",
     "txt-ownerName": "Owner Name",
