--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -209,6 +209,10 @@
     "txt-Top10ExternalPotSrcCountry": "Alert Source Country",
     "txt-Top10InternalSrcIp": "Alert Internal Source IP",
     "txt-Top10InternalMaskedIp": "Alert Internal Masked IP",
+    "txt-Top10SyslogConfigSource": "Syslog Config Source",
+    "txt-diskUsage": "Disk Usage",
+    "txt-diskAvail": "Disk Available Space (GB)",
+    "txt-diskTotal": "Disk Total Space (GB)",
     "txt-alertType": "Alert Type",
     "txt-deviceName": "Device Name",
     "txt-ownerName": "Owner Name",
@@ -564,6 +568,7 @@
     "protocol": "Protocol",
     "attackCnt": "Attack Count",
     "level": "Level",
+    "configSrc": "Config Source",
     "options": ""
   },
   "payloadsFields": {
