Update locale files.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -568,7 +568,8 @@
     "protocol": "Protocol",
     "attackCnt": "Attack Count",
     "level": "Level",
-    "configSrc": "Config Source",
+    "maskedIP": "Masked IP",
+    "configSrc": "Source",
     "options": ""
   },
   "payloadsFields": {
