--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -210,9 +210,14 @@
     "txt-Top10InternalSrcIp": "Alert Internal Source IP",
     "txt-Top10InternalMaskedIp": "Alert Internal Masked IP",
     "txt-Top10SyslogConfigSource": "Syslog Config Source",
-    "txt-diskUsage": "Disk Usage",
+    "txt-dnsQuery": "DNS Query",
+    "txt-disk-usage": "Disk Usage",
     "txt-diskAvail": "Disk Available Space (GB)",
     "txt-diskTotal": "Disk Total Space (GB)",
+    "txt-dns-histogram": "Network Traffic",
+    "txt-session": "Session",
+    "txt-packet": "Packet (MB)",
+    "txt-databyte": "Databyte (MB)",
     "txt-alertType": "Alert Type",
     "txt-deviceName": "Device Name",
     "txt-ownerName": "Owner Name",
@@ -569,7 +574,8 @@
     "attackCnt": "Attack Count",
     "level": "Level",
     "maskedIP": "Masked IP",
-    "configSrc": "Source",
+    "configSrc": "Config Source",
+    "query": "Query",
     "options": ""
   },
   "payloadsFields": {
