--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -210,9 +210,14 @@
     "txt-Top10InternalSrcIp": "內部主機告警統計",
     "txt-Top10InternalMaskedIp": "內部網段告警統計",
     "txt-Top10SyslogConfigSource": "系統日誌類型統計",
-    "txt-diskUsage": "系統記憶體狀態",
+    "txt-dnsQuery": "DNS Query",
+    "txt-disk-usage": "系統記憶體狀態",
     "txt-diskAvail": "Disk Available Space (GB)",
     "txt-diskTotal": "Disk Total Space (GB)",
+    "txt-dns-histogram": "網路流量統計",
+    "txt-session": "Session",
+    "txt-packet": "Packet (MB)",
+    "txt-databyte": "Databyte (MB)",
     "txt-alertType": "告警類型",
     "txt-deviceName": "裝置名稱",
     "txt-ownerName": "所屬人員",
@@ -569,7 +574,8 @@
     "attackCnt": "攻擊次數",
     "level": "等級",
     "maskedIP": "網段",
-    "configSrc": "來源",
+    "configSrc": "系統日誌",
+    "query": "Query",
     "options": ""
   },
   "payloadsFields": {
