Implement the Tree structure for Alert private and public tabs. Update Search Options component logics.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -242,6 +242,9 @@
     "txt-publicAlert": "Public Alert",
     "txt-alertInfo": "Alert Info",
     "txt-alertTime": "Alert Time",
+    "txt-privateMaskedIp": "Private Masked IP",
+    "txt-sourceCountry": "Source Country",
+    "txt-threatLevel": "Threat Level",
     "txt-ipSrc": "Source IP",
     "txt-portSrc": "Source Port",
     "txt-ipDst": "Destination IP",
