--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -242,6 +242,9 @@
     "txt-publicAlert": "外部告警",
     "txt-alertInfo": "告警資訊",
     "txt-alertTime": "告警時間",
+    "txt-privateMaskedIp": "內部網段",
+    "txt-sourceCountry": "來源國家",
+    "txt-threatLevel": "威脅等級",
     "txt-ipSrc": "來源IP",
     "txt-portSrc": "來源Port",
     "txt-ipDst": "目的IP",
