Implement the redirect functionality for Alert details info. Update code logic for Search bar.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -256,6 +256,7 @@
     "txt-safetyScanInfo": "Safety Scan Info",
     "txt-viewJSON": "$t(txt-view)JSON",
     "txt-queryMore": "Query",
+    "txt-queryEvents": "Query Events",
     "txt-downloadPCAP": "Download PCAP",
     "txt-downloadFile": "Download File",
     "txt-filterEmpty": "Filter empty packet",
