Update APIs for Alert private and public section. Add new Network Inventory page for Configuration.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -145,6 +145,7 @@
   "txt-accountManage": "Account Management",
   "txt-syslogManage": "Syslog Management",
   "txt-serviceStatus": "Service Status",
+  "txt-networkInventory": "Network Inventory",
 
   "txt-honeypot-dashboard": "Dashboard",
   "txt-honeypot-host": "Honeypot Host",
