Add the Yara/IR tabs and IP basic info for Network Inventory dialog box.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -266,7 +266,7 @@
     "txt-ownerInfo": "Owner",
     "txt-loginRecord": "AD Login Behavior",
     "txt-accessRecord": "Access Control Behavior",
-    "txt-floorInfor": "Floor",
+    "txt-floorInfo": "Floor",
     "txt-safetyScan": "Safety Scan"
   },
 
