--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -266,7 +266,7 @@
     "txt-ownerInfo": "所屬人員資訊",
     "txt-loginRecord": "AD登入紀錄",
     "txt-accessRecord": "門禁紀錄",
-    "txt-floorInfor": "樓層圖",
+    "txt-floorInfo": "樓層圖",
     "txt-safetyScan": "安全掃描"
   },
 
