Implement the floor map and upate API calls for Network Inventory. Upate Network Endpoint logic.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -400,7 +400,7 @@
   },
 
   "hmdFields": {
-    "id": "Host ID",
+    "ipDeviceUUID": "Host ID",
     "hostId": "Host ID",
     "hostName": "Host Name",
     "taskId": "Task ID",
@@ -658,6 +658,8 @@
   "ipFields": {
     "timestamp": "Date",
     "seat": "Seat",
+    "seatName": "Seat Name",
+    "areaName": "Area Name",
     "areaFullName": "Area Full Name",
     "ip": "IP",
     "mac": "MAC",
