Implement the Step-by-Step for adding/editing Network Inventory IP info.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -116,6 +116,12 @@
   "txt-previous": "Previous",
   "txt-next": "Next",
   "txt-events": "Events",
+  "txt-nextStep": "Next",
+  "txt-previousStep": "Previous",
+  "txt-cpu": "CPU",
+  "txt-memory": "Memory",
+  "txt-disks": "Disks",
+  "txt-shareFolders": "Share Folders",
 
   "txt-daily": "Daily",
   "txt-weekly": "Weekly",
@@ -676,6 +682,7 @@
     "ip": "IP",
     "mac": "MAC",
     "owner": "Owner",
+    "hostID": "Host ID",
     "hostName": "Hostname",
     "system": "System",
     "deviceType": "Type",
