--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -116,6 +116,12 @@
   "txt-previous": "上一則",
   "txt-next": "下一則",
   "txt-events": "Events",
+  "txt-nextStep": "下一步",
+  "txt-previousStep": "上一步",
+  "txt-cpu": "CPU",
+  "txt-memory": "記憶體",
+  "txt-disks": "Disks",
+  "txt-shareFolders": "Share Folders",
 
   "txt-daily": "每日",
   "txt-weekly": "每星期",
@@ -676,6 +682,7 @@
     "ip": "IP",
     "mac": "MAC",
     "owner": "所屬人員",
+    "hostID": "主機ID",
     "hostName": "主機名稱",
     "system": "使用系統",
     "deviceType": "裝置類型",
