Implement the API calls for Yara and IR rule in Dialog box. Minor bug fixes.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -118,6 +118,7 @@
   "txt-events": "Events",
   "txt-nextStep": "Next",
   "txt-previousStep": "Previous",
+  "txt-path": "Path",
   "txt-cpu": "CPU",
   "txt-memory": "Memory",
   "txt-disks": "Disks",
@@ -537,6 +538,8 @@
     "txt-backToList": "$t(txt-back) to $t(txt-listText)",
     "txt-backToMap": "$t(txt-back) to $t(txt-map)",
     "txt-lastUpdate": "Last Update",
+    "txt-createTime": "Create Time",
+    "txt-responseTime": "Response Time",
     "txt-suspiciousFileCount": "Suspicious File Count",
     "txt-suspiciousFilePath": "Suspicious File Path",
     "txt-reCheck": "Re-check",
