--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -118,6 +118,7 @@
   "txt-events": "Events",
   "txt-nextStep": "下一步",
   "txt-previousStep": "上一步",
+  "txt-path": "路徑",
   "txt-cpu": "CPU",
   "txt-memory": "記憶體",
   "txt-disks": "Disks",
@@ -537,6 +538,8 @@
     "txt-backToList": "$t(txt-back)$t(txt-listText)",
     "txt-backToMap": "$t(txt-back)$t(txt-map)",
     "txt-lastUpdate": "最近更新時間",
+    "txt-createTime": "最近觸發時間",
+    "txt-responseTime": "最近回應時間",
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFilePath": "可疑檔案路徑",
     "txt-reCheck": "重新檢測",
