Implement the new IP Device API. Add Department/Title edit component.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -118,6 +118,7 @@
   "txt-events": "Events",
   "txt-nextStep": "Next",
   "txt-previousStep": "Previous",
+  "txt-manage": "Manage",
   "txt-path": "Path",
   "txt-cpu": "CPU",
   "txt-ram": "Ram",
