--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -118,6 +118,7 @@
   "txt-events": "Events",
   "txt-nextStep": "下一步",
   "txt-previousStep": "上一步",
+  "txt-manage": "管理",
   "txt-path": "路徑",
   "txt-cpu": "CPU",
   "txt-ram": "記憶體",
