--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -547,8 +547,7 @@
     "txt-reCompress": "重新壓縮",
     "txt-existingOwner": "從人員名單選擇",
     "txt-addNewOwner": "新增人員",
-    "txt-addNewDepartment": "新增部門",
-    "txt-addNewTitle": "新增職稱",
+    "txt-manageDepartmentTitle": "管理部門/職稱",
     "txt-deleteDevice": "$t(txt-delete)$t(txt-device)",
     "txt-deleteDeviceMsg": "$t(txt-delete-msg)$t(txt-device)"
   },
