--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -548,6 +548,7 @@
     "txt-existingOwner": "Add from existing owner",
     "txt-addNewOwner": "Add Owner",
     "txt-manageDepartmentTitle": "Manage Department / Title",
+    "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
     "txt-deleteDevice": "$t(txt-delete) $t(txt-device)",
     "txt-deleteDeviceMsg": "$t(txt-delete-msg) $t(txt-device)"
   },
