Complete the Network Owner section based on the new UI design.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -118,6 +118,7 @@
   "txt-events": "Events",
   "txt-nextStep": "Next",
   "txt-previousStep": "Previous",
+  "txt-save": "Save",
   "txt-manage": "Manage",
   "txt-path": "Path",
   "txt-cpu": "CPU",
@@ -181,6 +182,11 @@
   "txt-deleteAccount": "Delete Account",
   "txt-unlockAccount": "Unlock Account",
   "txt-network-owner": "Owner",
+  "txt-ownerList": "Owner List",
+  "txt-existingOwner": "Add from existing owner",
+  "txt-addNewOwner": "Add Owner",
+  "txt-editOwner": "Edit Owner",
+  "txt-manageDepartmentTitle": "Manage Department and Title",
   "txt-network-ip": "IP",
   "txt-network-map": "Map",
   "txt-plan-map": "Map and Seat Information",
@@ -545,9 +551,6 @@
     "txt-suspiciousFilePath": "Suspicious File Path",
     "txt-reCheck": "Re-check",
     "txt-reCompress": "Re-compress",
-    "txt-existingOwner": "Add from existing owner",
-    "txt-addNewOwner": "Add Owner",
-    "txt-manageDepartmentTitle": "Manage Department / Title",
     "txt-editFloorMap": "$t(txt-edit) $t(txt-floorMap)",
     "txt-deleteDevice": "$t(txt-delete) $t(txt-device)",
     "txt-deleteDeviceMsg": "$t(txt-delete-msg) $t(txt-device)"
