--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -118,6 +118,7 @@
   "txt-events": "Events",
   "txt-nextStep": "下一步",
   "txt-previousStep": "上一步",
+  "txt-save": "儲存",
   "txt-manage": "管理",
   "txt-path": "路徑",
   "txt-cpu": "CPU",
@@ -181,6 +182,12 @@
   "txt-deleteAccount": "刪除帳號",
   "txt-unlockAccount": "解鎖帳號",
   "txt-network-owner": "所屬人員",
+  "txt-ownerList": "人員列表",
+  "txt-existingOwner": "從人員名單選擇",
+  "txt-addNewOwner": "新增人員",
+  "txt-editOwner": "編輯人員",
+  "txt-manageDepartmentTitle": "編輯部門與職稱",
+
   "txt-network-ip": "IP",
   "txt-network-map": "樓層圖",
   "txt-plan-map": "樓層座位資訊",
@@ -545,9 +552,6 @@
     "txt-suspiciousFilePath": "可疑檔案路徑",
     "txt-reCheck": "重新檢測",
     "txt-reCompress": "重新壓縮",
-    "txt-existingOwner": "從人員名單選擇",
-    "txt-addNewOwner": "新增人員",
-    "txt-manageDepartmentTitle": "管理部門/職稱",
     "txt-editFloorMap": "$t(txt-edit)$t(txt-floorMap)",
     "txt-deleteDevice": "$t(txt-delete)$t(txt-device)",
     "txt-deleteDeviceMsg": "$t(txt-delete-msg)$t(txt-device)"
