--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -452,8 +452,23 @@
   },
 
   "edgeManagement": {
-    "threatSettings": "威脅情資設定",
-    "notificationSettings": "通知設定"
+    "txt-threatSettings": "威脅情資設定",
+    "txt-notificationSettings": "通知設定",
+    "txt-basicInfo": "基本資訊",
+    "txt-editEdge": "編輯Edge",
+    "txt-edgeName": "Edge Name",
+    "txt-edgeID": "Edge ID",
+    "txt-ip": "IP",
+    "txt-vpnIP": "VPN IP",
+    "txt-vpnLicenseName": "VPN License Name",
+    "txt-serviceType": "服務類型",
+    "txt-serviceMode": "服務模式",
+    "txt-activatTime": "啟用時間",
+    "txt-lastUpateTime": "最近更新時間",
+    "txt-anyTime": "不限時段",
+    "txt-customTime": "自訂時段",
+    "txt-memo": "備忘錄",
+    "txt-memoMaxLength": "上限250字"
   },
 
   "honeynet": {
@@ -574,8 +589,7 @@
     "description": "Description",
     "keywords": "關鍵字",
     "serviceType": "服務種類",
-    "connectionStatus": "連線狀態",
-    "options": ""
+    "connectionStatus": "連線狀態"
   },
   "sensorFields": {
     "areaName": "區域名稱",
